frontend/k8s/kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: bens-apreendidos-frontend
spec:
  port:
    targetPort: bens-apreendidos-frontend
  to:
    kind: Service
    name: bens-apreendidos-frontend
  
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
